--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ filelock==3.17.0
 fonttools==4.56.0
 fqdn==1.5.1
 fsspec==2025.2.0
+graphviz==0.20.3
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -116,6 +117,7 @@ tomli==2.2.1
 torch==2.1.0
 torchaudio==2.1.0
 torchvision==0.16.0
+torchviz==0.0.3
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
